crates/php-parser/tests/snapshots/integration__error_suppress.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php @file_get_contents('missing.txt');
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "ErrorSuppress": {
              "kind": {
                "FunctionCall": {
                  "name": {
                    "kind": {
                      "Identifier": "file_get_contents"
                    },
                    "span": {
                      "start": 7,
                      "end": 24
                    }
                  },
                  "args": [
                    {
                      "name": null,
                      "value": {
                        "kind": {
                          "String": "missing.txt"
                        },
                        "span": {
                          "start": 25,
                          "end": 38
                        }
                      },
                      "unpack": false,
                      "by_ref": false,
                      "span": {
                        "start": 25,
                        "end": 38
                      }
                    }
                  ]
                }
              },
              "span": {
                "start": 7,
                "end": 39
              }
            }
          },
          "span": {
            "start": 6,
            "end": 39
          }
        }
      },
      "span": {
        "start": 6,
        "end": 40
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 40
  }
}
