crates/php-parser/tests/snapshots/integration__error_suppress_nested.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(&result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "ErrorSuppress": {
              "kind": {
                "MethodCall": {
                  "object": {
                    "kind": {
                      "Variable": "obj"
                    },
                    "span": {
                      "start": 7,
                      "end": 11
                    }
                  },
                  "method": {
                    "kind": {
                      "Identifier": "riskyMethod"
                    },
                    "span": {
                      "start": 13,
                      "end": 24
                    }
                  },
                  "args": [
                    {
                      "name": null,
                      "value": {
                        "kind": {
                          "ErrorSuppress": {
                            "kind": {
                              "Variable": "nested"
                            },
                            "span": {
                              "start": 26,
                              "end": 33
                            }
                          }
                        },
                        "span": {
                          "start": 25,
                          "end": 33
                        }
                      },
                      "unpack": false,
                      "by_ref": false,
                      "span": {
                        "start": 25,
                        "end": 33
                      }
                    }
                  ]
                }
              },
              "span": {
                "start": 7,
                "end": 34
              }
            }
          },
          "span": {
            "start": 6,
            "end": 34
          }
        }
      },
      "span": {
        "start": 6,
        "end": 35
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 35
  }
}
