crates/php-parser/tests/snapshots/integration__error_unclosed_brace.snap
---
source: crates/php-parser/tests/integration.rs
expression: format_errors(&result)
---
unclosed ''}'' opened at Span { start: 21, end: 22 }
