crates/php-parser/tests/snapshots/integration__error_unclosed_paren.snap
---
source: crates/php-parser/tests/integration.rs
expression: format_errors(&result)
---
unclosed '')'' opened at Span { start: 6, end: 7 }
